add continuação desenvolvimento do projeto.

--- a/chat/src/app/auth/components/registrar-usuario/registrar-usuario.html
+++ b/chat/src/app/auth/components/registrar-usuario/registrar-usuario.html
@@ -1,6 +1,6 @@
-<p-card header="Login">
+<p-card header="Registrar Usuário">
   <ng-template pTemplate="body">
-    <form [formGroup]="loginForm" (ngSubmit)="login()">
+    <form [formGroup]="loginForm" (ngSubmit)="registrar()">
       <div class="p-fluid">
         <label for="email">E-mail</label>
         <input id="email" type="text" pInputText formControlName="email" />
