--- a/chat/src/app/chat/chat.html
+++ b/chat/src/app/chat/chat.html
@@ -1,4 +1,4 @@
-<p-card header="Simple Card">
+<p-card [header]="usuario?.email!">
   <ng-template pTemplate="body">
       <div class="chat-card">
       <app-balao-chat [mensagens]="mensagens"></app-balao-chat>
