--- a/chat/src/app/chat/components/balao-chat/balao-chat.html
+++ b/chat/src/app/chat/components/balao-chat/balao-chat.html
@@ -1,7 +1,7 @@
 @for (item of mensagens; track $index) {
 <p-card class="p-2 mb-2 mt-2 fadein animation-duration-1000" class="bubble-card" [ngClass]="{ 'from-me': true }">
   <ng-template pTemplate="body">
-    <p>{{ item }}</p>
+    <p>{{ item.texto }}</p>
   </ng-template>
 </p-card>
 }
